--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,13 @@
-db:
-  image: postgres
-
-web:
+app:
   build: .
-  command: 'bash -c ''bin/rails server --binding 0.0.0.0 --port $PORT'''
-  working_dir: /app/user
-  links:
-    - db
-  env_file: .env
-  environment:
-    PORT: 8080
-    DATABASE_URL: 'postgres://postgres:@db:5432/postgres'
-  ports:
-    - '8080:8080'
-
-shell:
-  build: .
-  command: bash
-  working_dir: /app/user
-  environment:
-    PORT: 8080
-  ports:
-    - '8080:8080'
+  command: rails server -p 3000 -b '0.0.0.0'
   volumes:
-    - '.:/app/user'
+    - .:/app
+  ports:
+    - "3000:3000"
+  links:
+    - postgres
+postgres:
+  image: postgres:9.4
+  ports:
+    - "5432"
