--- a/config/database.yml
+++ b/config/database.yml
@@ -1,9 +1,9 @@
 default: &default
   adapter: postgresql
-  encoding: SQL_ASCII
+  encoding: unicode
   pool: 5
   timeout: 5000
-  username: ubuntu
+  username: postgres
   # please see the update below about using hostnames to
   # access linked services via docker-compose
   host: <%= ENV['POSTGRES_PORT_5432_TCP_ADDR'] %>
